# academic-reporting-system-dmce

./: .gitignore  docker-compose.yml  fix_corrupted_domains.py  migrate_domain_nullable.py  test_formatting.py  test_hallucination_fix.py  test_report_quality.py
backend/: Dockerfile  Procfile  pyproject.toml  reporting.db
backend/app/: main.py
backend/app/ai/: graph.py  map_reduce.py  state.py
backend/app/ai/nodes/: dispatch.py  intake.py  summarizer.py
backend/app/api/: admin.py  analytics.py  auth.py  dependencies.py  routes.py  simple_routes.py
backend/app/core/: config.py  database.py  input_sanitizer.py  institutional_context.py  security.py
backend/app/models/: domain.py
backend/app/schemas/: payload.py
backend/scripts/: add_sample_reports.py  reset_database.py  seed_database.py  view_database.py
frontend/: README.md  index.html  package-lock.json  package.json
frontend/public/images/: PLACE_LOGO_HERE.txt
frontend/src/: App.jsx  index.css
frontend/src/components/: ProtectedRoute.jsx
frontend/src/components/layout/: AppLayout.jsx  CollegeHeader.jsx  Navigation.jsx
frontend/src/components/ui/: Badge.jsx  Button.jsx  Card.jsx  Input.jsx  Loading.jsx  Modal.jsx
frontend/src/constants/: index.js
frontend/src/pages/: AcademicReportingSystem.jsx
frontend/src/pages/auth/: Login.jsx
frontend/src/services/: api.js
frontend/src/store/: authStore.js
frontend/src/utils/: helpers.js
frontend_gradio/: .gcloudignore  .gitignore  app.py  cloudbuild.yaml  deploy.sh  requirements.txt  run.sh
frontend_streamlit/: Dockerfile  app.py
(+8 files in other folders)
